Closed Bug 713977 Opened 12 years ago Closed 12 years ago

IonMonkey: TI assertion trying to inline with --ion -n

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

#4  0x08116e9f in js::types::TypeSet::getObjectCount (this=0x864f0f4) at ../jsinferinlines.h:1062
1062	    JS_ASSERT(!unknownObject());
(gdb) 
#5  0x0836e7f5 in js::ion::IonBuilder::getInliningTarget (this=0xffffc3f0, argc=1, pc=0x8652c24 ":", out=0xffffb20c) at /home/dvander/mozilla/work-ion/js/src/ion/IonBuilder.cpp:141
141	    if (calleeTypes->getObjectCount() > 1) {
Attached patch fixSplinter Review
Attachment #584663 - Flags: review?(bhackett1024)
Attachment #584663 - Flags: review?(bhackett1024) → review+
http://hg.mozilla.org/projects/ionmonkey/rev/1370f99d4c39
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.