Fix assert when inlining with --ion -n (bug 713977, r=bhackett).